--- a/public/style.css
+++ b/public/style.css
@@ -7,22 +7,23 @@ body {
 
 header {
   background-color: #003366;
-  color: white;
-  padding: 15px 20px;
+  height: 10px;
+}
+
+.logo-section {
   text-align: center;
-  display: flex;
-  align-items: center;
-  justify-content: center;
+  margin: 30px 0 10px;
 }
 
-header img {
-  height: 50px;
-  margin-right: 15px;
+.logo-section img {
+  height: 150px;
 }
 
-h1 {
-  margin: 0;
-  font-size: 28px;
+.logo-title {
+  font-size: 35px;
+  color: #003366;
+  font-weight: bold;
+  margin-top: 10px;
 }
 
 section {
@@ -101,12 +102,29 @@ input, select {
 }
 
 @media screen and (max-width: 600px) {
-  header h1 {
-    font-size: 20px;
-  }
-
   section {
     margin: 15px;
     padding: 15px;
   }
+
+  .logo-title {
+    font-size: 18px;
+  }
+}
+
+.logo-section {
+  text-align: center;
+  margin: 40px 0 20px;
+}
+
+.logo-img {
+  height: 110px; /* Increased size */
+}
+
+.logo-title {
+  font-size: 30px; /* Bigger title */
+  color: #003366;
+  font-weight: bold;
+  margin-top: 12px;
+  letter-spacing: 1px;
 }
